# zeyt

./: 01-PRD.md  02-DEVELOPMENT-PLAN.md  03-ARCHITECTURE.md  04-WORKSPACES.md  05A-AGENT-PHASE0-PROMPT.md  05B-AGENT-BUILD-PROMPT.md  16-SPLIT-LAG-FIX.md  17-AGENT-NOTIFICATIONS.md  18-DIRECTORY-AUTOSUGGEST.md  19-BUILD-TIER1-ROADMAP-FEATURES.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  main.rs  pty.rs  settings.rs  workspaces.rs
src/components/: PaneTree.tsx  SettingsModal.tsx  TabBar.tsx  TerminalView.tsx  Titlebar.tsx  WorkspaceSwitcher.tsx
src/lib/: TerminalRegistry.ts  notifications.ts  ptyClient.ts  store.ts  theme.ts
